--- a/Copy/WebContent/index.html
+++ b/Copy/WebContent/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery-ui.css" />
 <link rel="stylesheet" type="text/css" href="css/styles_my.css" />
-<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
+<!-- <script type="text/javascript" src="js/jquery-3.2.1.js"></script> -->
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="js/owl.carousel.js"></script>
